# aqua-sim

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONDITIONING.md  DATA_INGESTION.md  DATA_SOURCING.md  PLANNING.md  VALIDATION.md
docs/validation/: ida2021_report.json
src/aqua_sim/: __init__.py  __main__.py  config.py  geofence.py  grid.py  main.py  scenario.py
tests/: test_buildings_source.py  test_conditioned_physics.py  test_conditioning.py  test_dem_ingestion.py  test_hydraulic_validation.py  test_ida_pieces.py  test_risk.py  test_scenario.py  test_smoke.py  test_stability.py  test_swe.py  test_swe_numpy.py  test_terrain_and_grid.py
viz/: README.md  app.js  buildings-layer.js  index.html  palettes.js
viz/ny_run/: alerts.json  frame_001.json  frame_002.json  frame_003.json  frame_004.json  frame_005.json  frame_006.json  frame_007.json  frame_008.json  frame_009.json  frame_010.json  frame_011.json  frame_012.json  frame_013.json  frame_014.json  frame_015.json  frame_016.json  frame_017.json  frame_018.json  frame_019.json  frame_020.json  frame_021.json  frame_022.json  frame_023.json  frame_024.json  frame_025.json  manifest.json  terrain.json
viz/sample_run/: alerts.json  frame_001.json  frame_002.json  frame_003.json  frame_004.json  frame_005.json  frame_006.json  frame_007.json  frame_008.json  frame_009.json  frame_010.json  frame_011.json  frame_012.json  frame_013.json  frame_014.json  frame_015.json  frame_016.json  frame_017.json  frame_018.json  frame_019.json  frame_020.json  frame_021.json  frame_022.json  frame_023.json  (+28 more)
(+25 files in other folders)
